--- a/V1/styles.css
+++ b/V1/styles.css
@@ -3,9 +3,12 @@ html{
 }
 
 h1{
-    color: #7e35b8;
+    background-color: #7e35b8;
+    color: white;
 
 }
 h2{
-    color: #c9a0ea;
+    background-color: #c9a0ea;
+    color: white;
+
 }
