--- a/V1/styles.css
+++ b/V1/styles.css
@@ -1,6 +1,9 @@
 html{
     background-color: #898989;
 }
+body{
+    background-color: #c9a0ea;
+}
 
 h1{
     background-color: #7e35b8;
@@ -8,7 +11,6 @@ h1{
 
 }
 h2{
-    background-color: #c9a0ea;
     color: white;
 
 }
