--- a/V1/styles.css
+++ b/V1/styles.css
@@ -31,6 +31,10 @@ h2{
 p > h2{
     padding: 5px 0px 10px 5px;
 }
+nav a{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 10px 0px 10px 20px;
+}
 nav > ul > li a:link, nav > ul > a:visited{
     color: blueviolet;
     text-decoration: none;
