--- a/V1/styles.css
+++ b/V1/styles.css
@@ -17,7 +17,7 @@ body{
 h1{
     background-color: hsl(273, 55%, 46%);
     color: white;
-    font-size: 2.5em;
+    font-size: 3.5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
@@ -29,10 +29,11 @@ h2{
 
 }
 h3{
-    background-color: #6833ff;
+    background-color: #ee5ffc;
     color: white;
-    font-size: large;
+    font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-left: 25px;
 }
 p > h2{
     padding: 5px 0px 10px 5px;
@@ -48,4 +49,8 @@ nav > ul > li a:link, nav > ul > a:visited{
 nav > ul > li a:hover, nav > ul > a:active{
     color: rgb(17, 1, 112);
     text-decoration: underline;
+}
+article{
+    border: midnightblue;
+    background-color: orchid;
 }
