--- a/V1/styles.css
+++ b/V1/styles.css
@@ -57,6 +57,8 @@ article{
     padding: 25px 25px 25px 25px;
 }
 footer{
+    font-size: medium;
+    background-color: #898989;
     padding-top: 10px;
     padding-bottom: 20px;
 }
