--- a/V1/styles.css
+++ b/V1/styles.css
@@ -57,8 +57,9 @@ article{
     padding: 25px 25px 25px 25px;
 }
 footer{
-    font-size: medium;
+    font-size: 2.5em;
     background-color: #898989;
+    text-align: center;
     padding-top: 10px;
     padding-bottom: 20px;
 }
