--- a/V1/styles.css
+++ b/V1/styles.css
@@ -13,7 +13,10 @@ body{
     color: black;
     background-color: #c9a0ea;
 }
+img{
+    align-content: center;
 
+}
 h1{
     background-color: hsl(273, 55%, 46%);
     color: white;
@@ -29,7 +32,7 @@ h2{
 
 }
 h3{
-    background-color: #6833ff;
+    background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -57,7 +60,7 @@ article{
     padding: 25px 25px 25px 25px;
 }
 footer{
-    font-size: 2.5em;
+    font-size: 1.0em;
     background-color: #898989;
     text-align: center;
     padding-top: 10px;
