--- a/V1/styles.css
+++ b/V1/styles.css
@@ -7,6 +7,7 @@ The purpose of this assignment was to creat the first version of our websites.
 @charset "utf-8";
 
 html{
+    /* M2LO15 Apply colors using CSS */
     background-color: #898989;
 }
 body{
@@ -21,6 +22,7 @@ h1{
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: 3.5em;
+    /* M2LO13 Demonstrate how CSS can change presentation of textual elements*/
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
@@ -58,7 +60,7 @@ article{
     border: midnightblue;
     background-color: orchid;
     box-sizing: border-box;
-    padding: 25px 25px 25px 25px;
+    padding: 0px 25px 0px 25px;
 }
 body > footer{
     font-size: 1.0em;
