--- a/V1/styles.css
+++ b/V1/styles.css
@@ -14,6 +14,9 @@ body{
     color: black;
     background-color: #c9a0ea;
 }
+p > body{
+    font-size: 1.0px;
+}
 img{
     align-content: center;
 
