--- a/V1/styles.css
+++ b/V1/styles.css
@@ -16,9 +16,9 @@ body{
 }
 p > body{
     font-size: 1.0px;
+    font-family: 'Times New Roman', Times, serif;
 }
-img{
-    align-content: center;
+
 
 }
 h1{
