--- a/V1/styles.css
+++ b/V1/styles.css
@@ -39,7 +39,7 @@ h2{
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: large;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Quicksand, Verdana, Geneva, sans-serif;
 
 }
 h3{
