--- a/V1/styles.css
+++ b/V1/styles.css
@@ -6,24 +6,23 @@ The purpose of this assignment was to creat the first version of our websites.
 */
 @charset "utf-8";
 
-@font-face {
-    font-family: Quicksand;
-    src: url(Quicksand-regular.woff) format('woff'),
-         url(Quicksand-regular.ttf) format('truetype');
-}
 
 html{
     /* M2LO15 Apply colors using CSS */
     background-color: #898989;
 }
 body{
+    /*M2LO4 Demonstrate external, embedded, and inline styles */
     color: black;
     background-color: #c9a0ea;
 }
 p > body{
-    /* Demonstrate style precedence and inheritance in CSS (inheretence)*/
+    /*M2LO3  Demonstrate style precedence and inheritance in CSS (inheretence)*/
+    /*M2LO4 Demonstrate external, embedded, and inline styles */
     font-size: 1.0px;
-    font-family: 'Times New Roman', Times, serif;
+}
+p > *{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
@@ -39,7 +38,7 @@ h2{
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: large;
-    font-family: Quicksand, Verdana, Geneva, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 }
 h3{
