--- a/V1/styles.css
+++ b/V1/styles.css
@@ -38,6 +38,7 @@ h2{
 
 }
 h3{
+       /* M2LO6  Demonstrate a CSS id and a CSS class selector  */
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: medium;
@@ -50,6 +51,7 @@ p > h2{
     text-align: left;
 }
 /* M2LO5 Demonstrate contextual selectors*/
+/* M2LO6  Demonstrate a CSS id and a CSS class selector  */
 h1 > *{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -63,6 +65,7 @@ nav > ul > li a:link, nav > ul > a:visited{
     text-decoration: none;
 }
 nav > ul > li a:hover, nav > ul > a:active{
+    /*M2LO11 Demonstrate a pseudo-classes and a pseudo-element selector  */
     color: rgb(17, 1, 112);
     text-decoration: underline;
 }
