--- a/V2/styles.css
+++ b/V2/styles.css
@@ -7,30 +7,32 @@ The purpose of this assignment was to creat the first version of our websites.
 */
 
 html{
-    /* M2LO15 Apply colors using CSS */
     background-color: #898989;
 }
+nav.horizontalNavigation li{
+    display: block;
+    float: left;
+}
+nav.horizontalNavigation a{
+    display: block;
+    text-align: center;
+}
 body{
-    /*M2LO4 Demonstrate external, embedded, and inline styles */
     color: black;
     background-color: #c9a0ea;
 }
 p > body{
-    /*M2LO3  Demonstrate style precedence and inheritance in CSS (inheretence)*/
-    /*M2LO4 Demonstrate external, embedded, and inline styles */
     font-size: 1.0px;
 }
 
 h1{
-     /* M2LO13 Demonstrate how CSS can change presentation of textual elements*/
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: 3.5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
 }
+
 h2{
-    /* Demonstrate style precedence and inheritance in CSS (style inheretence)*/
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: large;
@@ -38,24 +40,20 @@ h2{
 
 }
 h3{
-       /* M2LO6  Demonstrate a CSS id and a CSS class selector  */
     background-color: hsl(273, 55%, 46%);
     color: white;
     font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-left: 25px;
 }
-/* M2LO5 Demonstrate contextual selectors*/
 p > h2{
     padding: 5px 0px 10px 5px;
     text-align: left;
 }
-/* M2LO5 Demonstrate contextual selectors*/
-/* M2LO6  Demonstrate a CSS id and a CSS class selector  */
 h1 > *{
     font-family: Arial, Helvetica, sans-serif;
 }
-
+/* Navigation */
 nav a{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 10px 0px 10px 20px;
@@ -65,10 +63,10 @@ nav > ul > li a:link, nav > ul > a:visited{
     text-decoration: none;
 }
 nav > ul > li a:hover, nav > ul > a:active{
-    /*M2LO11 Demonstrate a pseudo-classes and a pseudo-element selector  */
     color: rgb(17, 1, 112);
     text-decoration: underline;
 }
+/* */
 article{
     border: midnightblue;
     background-color: orchid;
