--- a/V2/styles.css
+++ b/V2/styles.css
@@ -16,6 +16,7 @@ h1{
     color: white;
     font-size: 3.5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    width: 80%;
 }
 h1 > *{
     font-family: Arial, Helvetica, sans-serif;
