--- a/V2/styles.css
+++ b/V2/styles.css
@@ -7,22 +7,20 @@ The purpose of this assignment was to creat the first version of our websites.
 */
 
 html{
-    background-color: #898989;
+    background-color: #544e5c;
 }
 
 /* Headers*/
 h1{
-    background-color: hsl(273, 55%, 46%);
+    background-color: hsl(273, 73%, 15%);
     color: white;
     font-size: 3.5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-h1 > *{
-    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 h2{
-    background-color: hsl(273, 55%, 46%);
+    background-color: hsl(273, 73%, 15%);
     color: white;
     font-size: large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -33,17 +31,22 @@ p > h2{
 }
 
 h3{
-    background-color: hsl(273, 55%, 46%);
+    background-color: hsl(273, 100%, 20%);
     color: white;
     font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-left: 25px;
 }
+/* Image */
+body > header >img {
+    display: inline-block;
+    width: 100%;
+    height: 400px;
+}
 
 /* Navigation */
 nav a{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding: 10px 0px 10px 20px;
 }
 nav > ul > li a:link, nav > ul > a:visited{
     color: blueviolet;
@@ -53,14 +56,18 @@ nav > ul > li a:hover, nav > ul > a:active{
     color: rgb(17, 1, 112);
     text-decoration: underline;
 }
-nav.horizontalNavigation li{
-    display: block;
-    float: left;
-}
-header > nav > li{
-    display: block;
-    text-align: center;
+
+header > nav > ul{
+    margin: 0px;
+    padding: 0px;
     list-style: none;
+}
+header > nav > ul > li{
+    display: inline-block;
+    margin-left: 100px;
+    text-transform: uppercase;
+    text-size-adjust: 20%;
+    text-align: center;
 }
 
 /* Article */
