--- a/V2/styles.css
+++ b/V2/styles.css
@@ -24,6 +24,8 @@ h2{
     color: white;
     font-size: large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0px;
+    text-indent: 10px;
 }
 p > h2{
     padding: 5px 0px 10px 5px;
@@ -35,13 +37,16 @@ h3{
     color: white;
     font-size: medium;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding-left: 25px;
+    padding-left: 0px;
+    text-align: center;
 }
 /* Image */
 body > header >img {
-    display: inline-block;
+
     width: 100%;
-    height: 400px;
+    height: 350px;
+    border: 1px solid hsl(273, 73%, 15%);
+    float: left;
 }
 
 /* Navigation */
@@ -56,7 +61,11 @@ nav > ul > li a:hover, nav > ul > a:active{
     color: rgb(17, 1, 112);
     text-decoration: underline;
 }
-
+header::after{
+    content: '';
+    display: table;
+    clear: both;
+}
 header > nav > ul{
     margin: 0px;
     padding: 0px;
@@ -67,8 +76,25 @@ header > nav > ul > li{
     margin-left: 100px;
     text-transform: uppercase;
     text-size-adjust: 20%;
-    text-align: center;
+    block-size: 25px;
 }
+/* div */
+div{
+    outline: 1px solid black;
+}
+div.row {
+    clear: both;
+}
+div.row::after {
+    clear: both;
+    content: '';
+    display: table;
+}
+div[class^="col-"] {
+    float: left;
+}
+div.col-1-2 {width: 45%;}
+
 
 /* Article */
 article{
@@ -76,6 +102,16 @@ article{
     background-color: orchid;
     box-sizing: border-box;
     padding: 0px 25px 0px 25px;
+
+}
+article > nav > ul{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+article > nav > ul > li {
+    text-align: center;
+    padding-bottom: 5px;
 }
 
 /* Body */
