--- a/V2/styles.css
+++ b/V2/styles.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
 Name: Julian Smith
-Date: May 02 2020
+Date: May 16 2020
 Assignment: M02: Project V1 - Basic HTML and CSS
 The purpose of this assignment was to creat the first version of our websites.
 */
@@ -25,11 +25,11 @@ h2{
     font-size: large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0px;
-    text-indent: 10px;
+    text-align: center;
 }
 p > h2{
     padding: 5px 0px 10px 5px;
-    text-align: left;
+    text-align: center;
 }
 
 h3{
@@ -45,9 +45,19 @@ body > header >img {
 
     width: 100%;
     height: 350px;
-    border: 1px solid hsl(273, 73%, 15%);
+    border: 1px solid white;
     float: left;
 }
+div > img {
+    width: 50%;
+    height: 50%;
+    border-radius: 20px;
+    box-shadow: rgb(9, 0, 24) -10px -10px 15px;
+}
+div[class^="col-"] {
+    float: left;
+}
+div.col-1-2 {width: 33%;}
 
 /* Navigation */
 nav a{
@@ -62,7 +72,7 @@ nav > ul > li a:hover, nav > ul > a:active{
     text-decoration: underline;
 }
 header::after{
-    content: '';
+    content: "";
     display: table;
     clear: both;
 }
@@ -79,21 +89,18 @@ header > nav > ul > li{
     block-size: 25px;
 }
 /* div */
-div{
-    outline: 1px solid black;
-}
 div.row {
     clear: both;
 }
 div.row::after {
     clear: both;
-    content: '';
+    content: "";
     display: table;
 }
 div[class^="col-"] {
     float: left;
 }
-div.col-1-2 {width: 45%;}
+div.col-1-2 {width: 50%;}
 
 
 /* Article */
@@ -102,6 +109,7 @@ article{
     background-color: orchid;
     box-sizing: border-box;
     padding: 0px 25px 0px 25px;
+    outline: 1px solid white;
 
 }
 article > nav > ul{
