--- a/V2/styles.css
+++ b/V2/styles.css
@@ -24,12 +24,13 @@ h2{
     color: white;
     font-size: large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0px;
+    margin: 10px 5px 5px 5px;
     text-align: center;
 }
-p > h2{
+h2 > p{
     padding: 5px 0px 10px 5px;
     text-align: center;
+    padding-left: 10px;
 }
 
 h3{
@@ -64,7 +65,7 @@ nav a{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 nav > ul > li a:link, nav > ul > a:visited{
-    color: blueviolet;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 nav > ul > li a:hover, nav > ul > a:active{
