--- a/V3/colors.css
+++ b/V3/colors.css
@@ -1,30 +1,30 @@
 
-html{
-
+html {
     background: linear-gradient(-200deg, black, darkblue, purple);
 }
 
 /* Headers*/
-h1{
+h1 {
     background-color: hsl(273, 73%, 15%);
     color: white;
 }
 
-h2{
+h2 {
     background-color: hsl(273, 73%, 15%);
     color: white;
 }
-h3{
+
+h3 {
     background-color: hsl(273, 100%, 20%);
     color: white;
 }
 
 /* Body */
-body{
+body {
     color: black;
     background-color: #c9a0ea;
 }
-body > footer{
+body > footer {
     background-color: #898989;
 }
 
@@ -34,15 +34,15 @@ body > header >img {
 }
 
 /*Navigation*/
-nav > ul > li a:link, nav > ul > a:visited{
+nav > ul > li a:link, nav > ul > a:visited {
     color: rgb(0, 0, 0);
 }
-nav > ul > li a:hover, nav > ul > a:active{
+nav > ul > li a:hover, nav > ul > a:active {
     color: rgb(17, 1, 112);
 }
 
 /* Article */
-article{
+article {
     border: midnightblue;
     background-color: orchid;
     outline: 1px solid white;
@@ -51,30 +51,33 @@ article{
 /* M6LO7 Demonstrate how to format a table with CSS*/
 /* Table Styles */
 table {
-    background-image: linear-gradient(to bottom,  orchid, black);
-    border: 5px transparent;
-  }
-  th, td{
+    background-image: linear-gradient(to bottom, orchid, black);
+    border: solid black;
+}
+
+th, td {
     border: 3px solid  hsl(273, 73%, 15%);
-    line-height: 1.4em;
-    padding: 8px;
-  }
+    line-height: 1.0em;
+    padding: 10px;
+}
   
-  th{
+th {
     background: black;
     color: white;
     font-weight: normal;
-  }
+}
   
-  td{
+td {
     color: white;
     font-size: 0.9em;
     vertical-align: top;
-  }
-  /* Column Styles */
+}
+
+/* Column Styles */
 col#firstCol {
     width: 15%;
-  }
-  col.dataCols {
+}
+
+col.dataCols {
     column-width: 25%;
-  }
+}
