--- a/V3/styles.css
+++ b/V3/styles.css
@@ -33,8 +33,9 @@ h3{
     padding-left: 0px;
     text-align: center;
 }
+
 /* Image */
-body > header >img {
+body > header > img {
     width: 100%;
     height: 350px;
     float: left;
@@ -43,26 +44,41 @@ body > header >img {
 div > img {
     width: 50%;
     height: 50%;
-    border-radius: 20px;
-    box-shadow: rgb(9, 0, 24) -10px -10px 15px;
+    float: left;
 }
+
 div[class^="col-"] {
     float: left;
 }
 div.col-1-2 {width: 33%;}
 
 /* Navigation */
-nav a{
+nav a {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 nav > ul > li a:link, nav > ul > a:visited {
     text-decoration: none;
+    
 }
 
 nav > ul > li a:hover, nav > ul > a:active{
     text-decoration: underline;
 }
+div > article  {
+    outline: none;
+    float: left;
+}
 
+ul.submenu {
+    display: none;
+}
+a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
+    display: block;
+    text-decoration: none;
+}
+
+
+/*Header */
 header::after{
     content: "";
     display: table;
@@ -82,7 +98,6 @@ header > nav > ul > li{
     position: relative;
 }
 /* div */
-
 div.row {
     clear: both;
 }
@@ -95,7 +110,7 @@ div.row::after {
 div[class^="col-"] {
     float: left;
     overflow: auto;
-    max-height: 200px;
+
 }
 div.col-1-2 {width: 50%;}
 
@@ -126,4 +141,25 @@ body > footer{
     text-align: center;
     padding-top: 10px;
     padding-bottom: 20px;
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    nav.horizontal a{
+        font-size: 1.5em;
+        line-height: 2.2em;
+    }
+    
+    img.panel {
+        width: 100%;
+    }
+        nav.horizontal {
+        -webkit-order: 99;
+        order: 99;
+    }
+    body > footer {
+        -webkit-order: 100;
+        order: 100;
+    }
 }
